# embedding-recommender-saas

./: .env.example  .gitignore  .mcp.json  COMPLETE_CUSTOMER_JOURNEY_TEST_REPORT.md  CONTINUE_TESTING.md  CURRENT_STATUS.md  CUSTOMER_JOURNEY.md  END_TO_END_EXAMPLE.md  FIXES_APPLIED.md  GET_STARTED.md  GITHUB_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTING.md  POSTMAN_SETUP.md  PROJECT_HANDOFF.md  QUICKSTART.md  README.md  TEST_RESULTS.md  docker-compose.yml  postman_collection.json  postman_environment.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: backend-api.yml  ci.yaml  data-pipeline.yml  deploy.yaml  frontend.yml  ml-engine.yml
backend-api/: .env.example  Dockerfile  QUICK_START.md  README.md  pyproject.toml  requirements.txt
backend-api/migrations/: 001_add_datasets_tables.sql  002_fix_dataset_uploads_nullable.sql  env.py
backend-api/migrations/versions/: be451e5bebc2_initial_migration.py
backend-api/scripts/: seed_data.py
backend-api/src/: main.py
backend-api/src/api/: schemas.py
backend-api/src/api/admin/: tenants.py
backend-api/src/api/v1/: api_keys.py  auth.py  datasets.py  interactions.py  items.py  recommendations.py  usage.py
backend-api/src/core/: config.py  middleware.py  rate_limiter.py  security.py
backend-api/src/db/: models.py  repositories.py  session.py
backend-api/src/schemas/: __init__.py
backend-api/src/services/: data_pipeline_client.py  event_storage.py  ml_client.py  usage_tracker.py
backend-api/tests/: __init__.py  conftest.py
backend-api/tests/integration/: test_api.py
backend-api/tests/unit/: test_security.py
backoffice/: .gitignore  DEPLOYMENT.md  README.md  SETUP.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
backoffice/app/: globals.css  layout.tsx  page.tsx
control-plane/: README.md  TESTING.md
control-plane/airflow/: Dockerfile  requirements.txt
data-pipeline/: .env.example  DELIVERY_REPORT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  generate_sample_data.py  pyproject.toml  requirements.txt  test_pipeline.py  verify_installation.sh
data-pipeline/src/: config.py  data_generator.py  main.py
data-pipeline/src/api/: __init__.py  health.py  upload.py  validation.py
data-pipeline/src/etl/: __init__.py  data_quality.py  feature_engineering.py  negative_sampling.py
data-pipeline/src/kafka/: __init__.py  consumer.py  producer.py
data-pipeline/src/producers/: interaction_producer.py
data-pipeline/src/storage/: __init__.py  s3_client.py
data-pipeline/src/utils/: metrics.py  storage.py
data-pipeline/src/validation/: __init__.py  expectations.py
docs/: DEVELOPMENT_ROADMAP.md
docs/api-contracts/: API_CONTRACTS.md
docs/architecture/: SYSTEM_OVERVIEW.md
frontend/: .env.example  .env.local.example  Dockerfile  IMPLEMENTATION_REPORT.md  QUICKSTART.md  README.md  TEST_PLAN.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/types/: dataset.ts  index.ts
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
ml-engine/: Dockerfile  pyproject.toml  requirements.txt
ml-engine/src/: config.py  main.py
ml-engine/src/serving/: __init__.py
ml-engine/src/training/: __init__.py  data_loader.py  evaluator.py  trainer.py
observability/: .env.example  AGENT2_COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION_GUIDE.md  METRICS_CATALOG.md  QUICK_REFERENCE.md  README.md  TESTING_GUIDE.md  docker-compose.yml
research/: CLAUDE.md  GEMINI.md  OPENAI.md
scripts/: init-kafka.sh  init-minio.sh  start-local.sh  stop-local.sh
(+83 files in other folders)
