[project]
name = "data-pipeline"
version = "0.1.0"
description = "Data ingestion, validation, and ETL pipeline for Embedding Recommender SaaS"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "kafka-python>=2.0.2",
    "pyspark>=3.5.0",
    "great-expectations>=0.18.0",
    "pandas>=2.1.0",
    "pyarrow>=15.0.0",
    "boto3>=1.34.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "numpy>=1.26.0",
    "prometheus-client>=0.19.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]
