[project]
name = "ml-engine"
version = "0.1.0"
description = "ML Recommendation Engine using LightGCN"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "torch-geometric>=2.4.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "faiss-cpu>=1.7.4",
    "redis>=5.0.1",
    "boto3>=1.34.0",
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    "scikit-learn>=1.4.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "prometheus-client>=0.19.0",
    "python-json-logger>=2.0.7",
    "pyarrow>=14.0.1",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
    "jupyter>=1.0.0",
    "ipykernel>=6.27.1",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
